# cppbackport

./: LICENSE.TXT  README.md
backport/: CMakeLists.txt
backport/BackportManager/: BackportManager.cpp  BackportManager.h  IncludeAction.cpp  IncludeAction.h  PreprocessAction.h  SimpleCompilationDatabase.h  SourcePrepare.cpp  SourcePrepare.h
backport/ClangPatch/: ASTMatchFinder.cpp.patch  ignoremsasm.patch  llvm.tools.clang.lib.Sema.Sema.cpp.patch  llvm.tools.clang.lib.Sema.SemaTemplateInstantiateDecl.cpp.patch  template-template-parameter-namespace-print-fix.patch  unknownattrib.patch
backport/Database/: DatabaseConnection.cpp  DatabaseConnection.h  DatabaseInterface.h
backport/Process/: BufferList.cpp  BufferList.h  CMakeLists.txt  PlatformDependentIncludes.h  Process.cpp  Process.h  ProcessIOStream.h  ProcessStreamBuffer.cpp  ProcessStreamBuffer.h
backport/Process/posix/: ProcessHelpers.cpp  ProcessHelpers.h  ProcessHelpersImpl.inc
backport/Process/win/: ProcessHelpers.cpp  ProcessHelpers.h  ProcessHelpersImpl.inc
backport/Serialize/: Serialize.h
backport/TransformBase/: Replacer.h  Tooling.cpp  Transform.cpp  Transform.h  TransformHandler.h  Transforms.cpp  Transforms.h
backport/Transforms/AddConstructorsAssignm/: AddConstructorsAssignm.cpp  AddConstructorsAssignmMatchers.h
backport/Transforms/FeatureFinder/: FeatureFinder.cpp  FeatureFinderMatchers.h
backport/Transforms/InstantiateTemplate/: InstantiateTemplate.cpp  InstantiateTemplateMatchers.h
backport/Transforms/ModifyFunctions/: ModifyAuto.inc  ModifyAutoMatchers.h  ModifyFunctions.cpp  ModifyVariadic.inc  ModifyVariadicMatchers.h  ModifyVariadicUtil.h
backport/Transforms/MultipleTransforms/: DeduceAuto.inc  DeduceAutoMatchers.h  MultipleTransforms.cpp  ReplaceForRange.inc  ReplaceForRangeMatchers.h  ReplaceMemberInit.inc  ReplaceMemberInitMatchers.h  (+2 more)
backport/Util/: CustomMatchers.h  FileDatas.h  Log.h  MoveMacros.h  MultiprocessUtility.h  PathUtility.cpp  PathUtility.h  PrintingPolicySingleton.h  ReplacementData.h  StringReplacer.cpp  StringReplacer.h  StringUtility.cpp  StringUtility.h  Timer.h  TransformUtility.cpp  TransformUtility.h
backport/test/: run-test.py
backport/test-backportdb/: db.py  settime.py
backport/tool/: CMakeLists.txt  backport.cpp
backportscripts/: Debug.bat  Release.bat  settings.bat
tracer/: CMakeLists.txt  DatabaseConnection.cpp  DatabaseConnection.h  DatabaseInterface.h  trace.cpp  trace.h
tracer/Util/: FileDatas.h  ReplacementData.h
(+182 files in other folders)
